--- a/FullScreenTitleBarRepo/FullScreenModeTitleBar.xaml
+++ b/FullScreenTitleBarRepo/FullScreenModeTitleBar.xaml
@@ -5,7 +5,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:Interactivity="using:Microsoft.Xaml.Interactivity" 
              xmlns:Core="using:Microsoft.Xaml.Interactions.Core"
-             x:Class="FullScreenTitleBarRepo.FullScreenTitleBar"
+             x:Class="FullScreenTitleBarRepo.FullScreenModeTitleBar"
              x:Name="Self" mc:Ignorable="d" d:DesignHeight="300" d:DesignWidth="400">
     
     <UserControl.Resources>
@@ -91,14 +91,15 @@
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
-                <TextBlock x:Name="AppName" Text="aaa" Foreground="{Binding Foreground, ElementName=Self}" VerticalAlignment="Center" Margin="12,0,0,0" FontSize="10" />
+                <TextBlock x:Name="AppName" Foreground="{Binding Foreground, ElementName=Self}" VerticalAlignment="Center" Margin="12,0,0,0" FontSize="10" />
                 <Viewbox Grid.Column="1" StretchDirection="DownOnly">
                     <Button x:Name="FullScreenModeToggle" Click="OnFullScreenModeToggleClick" Foreground="{Binding Foreground, ElementName=Self}" Style="{StaticResource FullScreenModeButtonStyle}">
                         <SymbolIcon Symbol="FullScreen" />
                     </Button>
                 </Viewbox>
-
             </Grid>
         </Grid>
+
+        <!-- MainPage will be injected here -->
     </Grid>
 </UserControl>
